--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "p": "react-native bundle --entry-file ./index.js --bundle-output ./ios/bundle/index.ios.jsbundle --platform ios --assets-dest ./ios/bundle --dev true"
   },
   "dependencies": {
     "antd-mobile": "^2.1.6",
     "react": "16.2.0",
     "react-dom": "^16.2.0",
     "react-native": "0.53.3",
+    "react-native-storage": "^0.2.2",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1"
